<resources>
    <string name="app_name">Buketomat</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="orders">Narudžbe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="mail_fragment">Slanje maila</string>
    <string name="ime">Ime</string>
    <string name="email">Email</string>
    <string name="lozinka">Lozinka</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="registracija">REGISTRACIJA:</string>
    <string name="korime">korime</string>
    <string name="login">Login</string>
    <string name="prezime">prezime</string>
    <string name="adresa">adresa</string>
    <string name="primatelj">Primatelj:</string>
    <string name="predmet">Predmet</string>
    <string name="sadrzaj_poruke">Sadrzaj poruke</string>
    <string name="posalji">Posalji</string>
    <string name="unesite_mail">Unesite mail</string>
    <string name="finished_bouquets_fragment">Finished bouquets</string>
    <string name="new_order">Novi buket</string>
    <string name="datum_narudzbe">Datum narudžbe: </string>
    <string name="narud_ba_broj">Narudžba broj:</string>
    <string name="iznos">Iznos:</string>
    <string name="zatvori">Zatvori</string>
    <string name="datum_dostave">Datum dostave: </string>
    <string name="shopingCart">Košarica</string>
    <string name="Delete">Izbriši</string>
    <string name="Cancel">Odustani</string>
</resources>